# operation-mango-public

./: ExperimentReplication.md  README.md  pyproject.toml  shell.nix
docker/: Dockerfile  entrypoint.py  live_def.patch
package/: assumptions.md  requirements.txt  requirements_dev.txt
package/argument_resolver/: __main__.py
package/argument_resolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
package/argument_resolver/analysis/: base.py  env_resolve.py  mango.py
package/argument_resolver/concretization/: concrete_runner.py
package/argument_resolver/external_function/: __init__.py  input_functions.py
package/argument_resolver/external_function/function_declarations/: __init__.py  custom.py  nvram.py  win32.py
package/argument_resolver/external_function/sink/: __init__.py  sink_lists.py
package/argument_resolver/formatters/: closure_formatter.py  log_formatter.py  results_formatter.py
package/argument_resolver/handlers/: README.md  __init__.py  base.py  local_handler.py  network.py  nvram.py  static.py  stdio.py  stdlib.py  string.py  unistd.py  url_param.py
package/argument_resolver/handlers/functions/: __init__.py  constant_function.py
package/argument_resolver/utils/: call_trace.py  call_trace_visitor.py  calling_convention.py  closure.py  format_prototype.py  graph_helper.py  rank.py  rda.py  stored_function.py  transitive_closure.py  utils.py
package/tests/: test_basic_facts_for_handcrafted_binaries.py  test_call_trace.py  test_calling_convention.py  test_sink.py  test_transitive_closure.py  test_utils.py
package/tests/binaries/: Makefile
package/tests/binaries/after_values/: program  program.c
package/tests/binaries/early_resolve/: program  program.c
package/tests/binaries/execlp/: program  program.c
package/tests/binaries/execve/: other_prog  other_prog.c  program  program.c
package/tests/binaries/heap/: program  program.c
package/tests/binaries/layered/: program  program.c
package/tests/binaries/looper/: program  program.c
package/tests/binaries/multi_input/: program  program.c
package/tests/binaries/nested/: program  program.c
package/tests/binaries/nvram/: keys  keys.c  nvram_lib.c  nvram_lib.h  program  program.c
package/tests/binaries/off_shoot/: program  program.c
package/tests/binaries/recursive/: program  (+1 more)
package/tests/test_handlers/: handler_tester.py  test_stdio.py  test_stdlib.py  test_string.py  test_unistd.py
pipeline/: MANIFEST.in  README.md  pyproject.toml
pipeline/mango_pipeline/: __init__.py  base.py  kube.py  local.py  remote.py  run.py
pipeline/mango_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline/mango_pipeline/firmware/: __init__.py  elf_finder.py  elf_info.py  keyword_finder.py
pipeline/mango_pipeline/scripts/: ablation.py  aggregate.py  data_printer.py  de-dup.py  get_tp_from_sheet.py  path_context_aggregator.py  show_data.py  show_table.py  symbols_and_vendors.py
(+6 files in other folders)
